--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -30,13 +30,6 @@
     <property name="spacing">
      <number>0</number>
     </property>
-    <item row="0" column="2">
-     <widget class="QPushButton" name="pushButton_3">
-      <property name="text">
-       <string>PushButton</string>
-      </property>
-     </widget>
-    </item>
     <item row="0" column="0">
      <widget class="QPushButton" name="pushButton">
       <property name="text">
@@ -51,13 +44,6 @@
       </property>
      </widget>
     </item>
-    <item row="0" column="3">
-     <widget class="QPushButton" name="pushButton_4">
-      <property name="text">
-       <string>PushButton</string>
-      </property>
-     </widget>
-    </item>
     <item row="0" column="4">
      <widget class="QPushButton" name="pushButton_5">
       <property name="text">
@@ -65,8 +51,36 @@
       </property>
      </widget>
     </item>
-    <item row="2" column="0" colspan="5">
-     <widget class="SceneWidget" name="openGLWidgetScene"/>
+    <item row="0" column="2">
+     <widget class="QPushButton" name="pushButton_3">
+      <property name="text">
+       <string>PushButton</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="3">
+     <widget class="QPushButton" name="pushButton_4">
+      <property name="text">
+       <string>PushButton</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="0" colspan="5">
+     <layout class="QHBoxLayout" name="horizontalLayout">
+      <item>
+       <widget class="QSlider" name="verticalSlider">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="SliceOrientationXY" name="openGLSliceXYWidget"/>
+      </item>
+      <item>
+       <widget class="SceneWidget" name="openGLSceneWidget"/>
+      </item>
+     </layout>
     </item>
    </layout>
   </widget>
@@ -167,6 +181,11 @@
    <slots>
     <slot>zoomToExtent()</slot>
    </slots>
+  </customwidget>
+  <customwidget>
+   <class>SliceOrientationXY</class>
+   <extends>QOpenGLWidget</extends>
+   <header>sliceorientationXY.h</header>
   </customwidget>
  </customwidgets>
  <resources>
